--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -52,3 +52,29 @@ article a:hover{
 .info{
 	font-size:14px;
 }
+.prepage a,.nextpage a{
+	float:left;
+	text-decoration:none;
+	padding:.5em 1em;
+	color:#ff0000;
+	font-weight: bold;
+}
+.prepage a:hover,.nextpage a:hover{
+	background-color:#ff0000;
+	color:#f9f9f9;
+	transition: color .2s linear;
+	text-decoration:none;
+}
+.archive{
+	list-style: none;
+	line-height: 28px;
+}
+.archive h3{
+	margin:0.5em 0;
+}
+.archive time{
+	float:left;
+	font-size:14px;
+	color:#999;
+	margin-right:1.2em;
+}
