--- a/views/header.ejs
+++ b/views/header.ejs
@@ -14,6 +14,7 @@
     </header>
     <nav>
     	<span><a href="/" title="主页">home</a></span>
+        <span><a href="/archive" title="存档">archive</a></span>
         <% if (user) { %>
         <span><a href="/post" title="登录">post</a></span>
         <span><a href="/logout" title="注册">logout</a></span>
